# awai

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-api.txt  requirements.txt
artifacts/models/: latest_model.txt  registry.json
artifacts/reports/: augmentation_report_20260519-055225.json  dataset_shapes_20260517-192123.npz  dataset_shapes_20260519-055225.npz  grid_search_results_20260523_145718.json  grid_search_results_20260523_232200.json  leakage_report_20260519-055225.json  prepare_dataset_summary_20260517-191815.json  prepare_dataset_summary_20260519-055225.json
dataset/: roads_master.csv
docs/: reproducibility.md
frontend/: app.js  index.html  package.json  style.css
notebooks/: 01_lstm_real_dataset_training.ipynb  01_lstm_real_dataset_training_executed.ipynb  02_lstm_baseline_comparison.ipynb  02_lstm_baseline_comparison_executed.ipynb  03_lstm_baseline_statistical_tests.ipynb  03_lstm_baseline_statistical_tests_executed.ipynb  04_lstm_horizon_diagnostics.ipynb  04_lstm_horizon_diagnostics_executed.ipynb  05_lstm_horizon_statistical_tests.ipynb  05_lstm_horizon_statistical_tests_executed.ipynb  06_publication_visualizations.ipynb  06_publication_visualizations_executed.ipynb  07_lstm_model_runner_validation.ipynb  08_realtime_inference_engine_validation.ipynb  09_uncertainty_estimation_validation.ipynb
scratch/: grid_search.py
scripts/: cleanup_db_now.py  cleanup_supabase_now.sql  test_batch_api.py  test_lstm_local.py  test_lstm_predict.py
src/traffic_prediction/: __init__.py  __main__.py  artifacts.py
(+1919 files in other folders)
