[project]
name = "awai-traffic-prediction"
version = "0.1.0"
description = "Lightweight LSTM traffic prediction system for Sukabumi road segments."
requires-python = ">=3.10"
dependencies = [
  "apscheduler",
  "fastapi",
  "httpx",
  "joblib",
  "numpy",
  "pandas",
  "psutil",
  "pydantic",
  "pyyaml",
  "requests",
  "scikit-learn",
  "torch",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "hypothesis",
  "pytest",
]
research = [
  "catboost",
  "lightgbm",
  "matplotlib",
  "scipy",
  "seaborn",
  "statsmodels",
  "xgboost",
]
notebook = [
  "jupyter",
  "nbconvert",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
